[package]
name = "rs_hdfs"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "rs_hdfs_datanode"
path = "src/bin/datanode.rs"

[[bin]]
name = "rs_hdfs_namenode"
path = "src/bin/namenode.rs"

[[bin]]
name = "rs_hdfs_client"
path = "src/bin/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
toml = "0.8.8"
prost = "0.12.3"
prost-types = "0.12.3"
tonic = "0.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
adler32 = "1.2.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = "0.10.2"

