[package]
name = "rs_hdfs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "rshdfs_datanode"
path = "src/bin/datanode.rs"

[[bin]]
name = "rshdfs_namenode"
path = "src/bin/namenode.rs"

[[bin]]
name = "rshdfs"
path = "src/bin/rshdfs.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
toml = "0.8.8"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
prost = "0.12.3"
prost-types = "0.12.3"
tonic = "0.11.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.114"
sysinfo = "0.30.5"
adler = "1.0.2"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
futures = "0.3.30"
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.3"
criterion = { version = "0.5.1", features = ["async_tokio"] }

